[package]
name = "redis-module"
version = "2.0.7"
authors = ["Gavrie Philipson <gavrie@redis.com>", "Guy Korland <guy.korland@redis.com>"]
edition = "2021"
build = "build.rs"
description = "A toolkit for building Redis modules in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/RedisLabsModules/redismodule-rs"
readme = "README.md"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

[dependencies]
bitflags = "2"
libc = "0.2"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
regex = "1"
strum_macros = "0.24"
backtrace = "0.3"
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
nix = "0.26"
cfg-if = "1"
redis-module-macros-internals = { path = "./redismodule-rs-macros-internals" }
redis-module-macros = { path = "./redismodule-rs-macros"}
log = "0.4"
chrono = "0.4.31"
lazy_static = "1"

[dev-dependencies]
anyhow = "1"
redis = "0.23"
lazy_static = "1"
redis-module-macros = { path = "./redismodule-rs-macros"}
redis-module = { path = "./", default-features = false, features = ["min-redis-compatibility-version-6-2"] }

[build-dependencies]
bindgen = "0.66"
cc = "1"

[features]
default = ["min-redis-compatibility-version-6-0"]
min-redis-compatibility-version-7-2 = ["redis-module/min-redis-compatibility-version-7-2"]
min-redis-compatibility-version-7-0 = ["redis-module/min-redis-compatibility-version-7-0"]
min-redis-compatibility-version-6-2 = ["redis-module/min-redis-compatibility-version-6-2"]
min-redis-compatibility-version-6-0 = ["redis-module/min-redis-compatibility-version-6-0"]

[lib]
name = "memory_inspector"
crate-type = ["dylib"]